==> m-gorecki/mynewt-core/hw/mcu/nordic/nrf5340/src/hal_spi.c <==
#include <string.h>
#include <errno.h>
#include <assert.h>
#include <os/mynewt.h>
#include <hal/hal_spi.h>
#include <mcu/nrf5340_hal.h>
#include <nrf.h>
#include <nrfx_config.h>
#include <nrfx_common.h>
#include <nrfx_spis.h>
#include <nrfx_spim.h>
#define SPIM_TXD_MAXCNT_MAX 0xffff
#define NRF5340_HAL_SPI_MAX (5)
#define HAL_SPI_SLAVE_STATE_IDLE        (0)
#define HAL_SPI_SLAVE_STATE_ACQ_SEM     (1)
#define HAL_SPI_SLAVE_STATE_READY       (2)
#define NRF5340_HAL_SPI_RESOLVE(__n, __v)                     \
    if ((__n) >= NRF5340_HAL_SPI_MAX) {                       \
        rc = EINVAL;                                        \
        goto err;                                           \
    }                                                       \
    (__v) = (struct nrf5340_hal_spi *) nrf5340_hal_spis[(__n)]; \
    if ((__v) == NULL) {                                    \
        rc = EINVAL;                                        \
        goto err;                                           \
    }

static int
hal_spi_config_master(struct nrf5340_hal_spi *spi,
                      struct hal_spi_settings *settings)
{
    int rc;
    int frequency;
    nrfx_spim_config_t spim_config;

    /* 16 and 32 MHz is only supported on SPI_4_MASTER */
#if defined(SPIM_FREQUENCY_FREQUENCY_M32) && MYNEWT_VAL(SPI_4_MASTER)
    if (settings->baudrate >= 32000 && spim == NRF_SPIM4) {
        frequency = 32000000;
    } else
#endif
#if defined(SPIM_FREQUENCY_FREQUENCY_M16) && MYNEWT_VAL(SPI_4_MASTER)
    if (settings->baudrate >= 16000 && spim == NRF_SPIM4) {
        frequency = 16000000;
    } else
#endif
    if (settings->baudrate >= 8000) {
        frequency = 8000000;
    } else if (settings->baudrate >= 4000) {
        frequency = 4000000;
    } else if (settings->baudrate >= 2000) {
        frequency = 2000000;
    } else if (settings->baudrate >= 1000) {
        frequency = 1000000;
    } else if (settings->baudrate >= 500) {
        frequency = 500000;
    } else if (settings->baudrate >= 250) {
        frequency = 250000;
    } else if (settings->baudrate >= 125) {
        frequency = 125000;
    } else {
        frequency = 0;
        return EINVAL;
    }

    if (settings->word_size != HAL_SPI_WORD_SIZE_8BIT) {
        return EINVAL;
    }

    spim_config.miso_pin = spi->miso_pin;
    spim_config.mosi_pin = spi->mosi_pin;
    spim_config.ss_pin = spi->ss_pin;
    spim_config.sck_pin = spi->sck_pin;
    spim_config.frequency = frequency;
    spim_config.mode = settings->data_mode;
    spim_config.bit_order = settings->data_order;
    spim_config.miso_pull = NRF_GPIO_PIN_NOPULL;
    spim_config.irq_priority = (1 << __NVIC_PRIO_BITS) - 1;
    spim_config.skip_psel_cfg = false;
    spim_config.skip_gpio_cfg = false;
    spim_config.ss_active_high = false;

    rc = nrfx_spim_init(&spi->nrfx_spi.spim, &spim_config, hal_spim_nrfx_handler, &spi->cb_data);
    if (rc != NRFX_SUCCESS) {
        return EINVAL;
    }

    return 0;
}

static int
hal_spi_config_slave(struct nrf5340_hal_spi *spi,
                     struct hal_spi_settings *settings)
{
#if MYNEWT_VAL(SPI_0_SLAVE) || MYNEWT_VAL(SPI_1_SLAVE) || \
    MYNEWT_VAL(SPI_2_SLAVE) || MYNEWT_VAL(SPI_3_SLAVE)
    int rc;
    nrfx_spis_config_t spis_config;

    /* Only 8-bit word sizes supported. */
    if (settings->word_size != HAL_SPI_WORD_SIZE_8BIT) {
        return EINVAL;
    }

    spis_config.miso_pin = spi->miso_pin;
    spis_config.mosi_pin = spi->mosi_pin;
    spis_config.sck_pin = spi->sck_pin;
    spis_config.csn_pin = spi->ss_pin;
    spis_config.mode = settings->data_mode;
    spis_config.bit_order = settings->data_order;
    spis_config.miso_drive = NRF_GPIO_PIN_S0S1;
    spis_config.csn_pullup = NRF_GPIO_PIN_PULLUP;
    spis_config.def = spi->def_tx_val;
    spis_config.orc = spi->def_tx_val;
    spis_config.irq_priority = (1 << __NVIC_PRIO_BITS) - 1;
    spis_config.skip_gpio_cfg = false;
    spis_config.skip_psel_cfg = false;

    rc = nrfx_spis_init(&spi->nrfx_spi.spis, &spis_config, hal_spis_nrfx_handler, &spi->cb_data);
    if (rc != NRFX_SUCCESS) {
        return EINVAL;
    }
    return 0;
#else
    return SYS_ENOTSUP;
#endif
}

int
hal_spi_init(int spi_num, void *cfg, uint8_t spi_type)
{
    int rc;
    struct nrf5340_hal_spi *spi;
    struct nrf5340_hal_spi_cfg *pins;

    NRF5340_HAL_SPI_RESOLVE(spi_num, spi);

    /* Check for valid arguments */
    rc = EINVAL;
    if (cfg == NULL) {
        goto err;
    }

    if ((spi_type != HAL_SPI_TYPE_MASTER) && (spi_type != HAL_SPI_TYPE_SLAVE)) {
        goto err;
    }

    spi->spi_type  = spi_type;
    if (spi_num == 0) {
#if MYNEWT_VAL(SPI_0_MASTER) || MYNEWT_VAL(SPI_0_SLAVE)
        if (spi_type == HAL_SPI_TYPE_MASTER) {
#if MYNEWT_VAL(SPI_0_MASTER)
            spi->nrfx_spi.spim.p_reg = NRF_SPIM0_S;
#else
            assert(0);
#endif
        } else {
#if MYNEWT_VAL(SPI_0_SLAVE)

            NVIC_SetVector(nrfx_get_irq_number(NRF_SPIS0_S),
                           (uint32_t)nrfx_spis_0_irq_handler);
            spi->nrfx_spi.spis.p_reg = NRF_SPIS0_S;
#else
            assert(0);
#endif
        }
#else
        goto err;
#endif
    } else if (spi_num == 1) {
#if MYNEWT_VAL(SPI_1_MASTER)  || MYNEWT_VAL(SPI_1_SLAVE)
        spi->irq_num = SPIM1_SPIS1_TWIM1_TWIS1_UARTE1_IRQn;
        if (spi_type == HAL_SPI_TYPE_MASTER) {
#if MYNEWT_VAL(SPI_1_MASTER)
            spi->nrfx_spi.spim.p_reg = NRF_SPIM1_S;
#else
            assert(0);
#endif
        } else {
#if MYNEWT_VAL(SPI_1_SLAVE)
            spi->nrfx_spi.spis.p_reg = NRF_SPIS1_S;
#else
            assert(0);
#endif
        }
#else
        goto err;
#endif
    } else if (spi_num == 2) {
#if MYNEWT_VAL(SPI_2_MASTER)  || MYNEWT_VAL(SPI_2_SLAVE)
        spi->irq_num = SPIM2_SPIS2_TWIM2_TWIS2_UARTE2_IRQn;
        if (spi_type == HAL_SPI_TYPE_MASTER) {
#if MYNEWT_VAL(SPI_2_MASTER)
            spi->nrfx_spi.spim.p_reg = NRF_SPIM2_S;
#else
            assert(0);
#endif
        } else {
#if MYNEWT_VAL(SPI_2_SLAVE)
            spi->nrfx_spi.spis.p_reg = NRF_SPIS2_S;
#else
            assert(0);
#endif
        }
#else
        goto err;
#endif
    } else if (spi_num == 3) {
#if MYNEWT_VAL(SPI_3_MASTER)  || MYNEWT_VAL(SPI_3_SLAVE)
        if (spi_type == HAL_SPI_TYPE_MASTER) {
#if MYNEWT_VAL(SPI_3_MASTER)
            spi->nrfx_spi.spim.p_reg = NRF_SPIM2_S;
#else
            assert(0);
#endif
        } else {
#if MYNEWT_VAL(SPI_3_SLAVE)
            spi->nrfx_spi.spis.p_reg = NRF_SPIS2_S;
#else
            assert(0);
#endif
        }
#else
        goto err;
#endif
    } else if (spi_num == 4) {
#if MYNEWT_VAL(SPI_4_MASTER)
        if (spi_type == HAL_SPI_TYPE_MASTER) {
            spi->nrfx_spi.spim.p_reg = NRF_SPIM4_S;
        } else {
            assert(0);
        }
#else
        goto err;
#endif
    } else {
        goto err;
    }

    rc = hal_spi_disable(spi_num);
    if (rc) {
        goto err;
    }

    pins = (struct nrf5340_hal_spi_cfg *)cfg;
    spi->sck_pin = pins->sck_pin;
    spi->ss_pin = pins->ss_pin;
    spi->mosi_pin = pins->mosi_pin;
    spi->miso_pin = pins->miso_pin;

err:
    return (rc);
}

int
hal_spi_config(int spi_num, struct hal_spi_settings *settings)
{
    int rc;
    struct nrf5340_hal_spi *spi;

    NRF5340_HAL_SPI_RESOLVE(spi_num, spi);

    if (spi->spi_type == HAL_SPI_TYPE_MASTER) {
        if (nrf_spim_enable_check(spi->nrfx_spi.spim.p_reg)) {
            return -1;
        }
    } else {
        if (nrf_spis_enable_check(spi->nrfx_spi.spis.p_reg)) {
            return -1;
        }
    }

    if (settings->word_size != HAL_SPI_WORD_SIZE_8BIT) {
        return EINVAL;
    }

    if (spi->spi_type  == HAL_SPI_TYPE_MASTER) {
        rc = hal_spi_config_master(spi, settings);
    } else {
        rc = hal_spi_config_slave(spi, settings);
    }

    hal_spi_disable(spi_num);

err:
    return (rc);
}

int
hal_spi_enable(int spi_num)
{
    int rc;
    NRF_SPIS_Type *spis;
    NRF_SPIM_Type *spim;
    struct nrf5340_hal_spi *spi;

    NRF5340_HAL_SPI_RESOLVE(spi_num, spi);

    if (spi->cb_data.func == NULL) {
        rc = EINVAL;
        goto err;
    }

    if (spi->spi_type  == HAL_SPI_TYPE_MASTER) {
        spim = spi->nrfx_spi.spim.p_reg;
        nrf_spim_event_clear(spim, NRF_SPIM_EVENT_END);
        nrf_spim_enable(spim);
    } else {
        spis = spi->nrfx_spi.spis.p_reg;
        nrf_spis_event_clear(spis, NRF_SPIS_EVENT_END);
        nrf_spis_event_clear(spis, NRF_SPIS_EVENT_ACQUIRED);
        nrf_spis_int_enable(spis, NRF_SPIS_INT_END_MASK | NRF_SPIS_INT_ACQUIRED_MASK);
        nrf_spis_enable(spis);
    }
    rc = 0;

err:
    return rc;
}

int
hal_spi_disable(int spi_num)
{
    int rc;
    NRF_SPIS_Type *spis;
    struct nrf5340_hal_spi *spi;

    NRF5340_HAL_SPI_RESOLVE(spi_num, spi);

    if (spi->spi_type  == HAL_SPI_TYPE_MASTER) {
        if (nrfx_spim_init_check(&spi->nrfx_spi.spim)) {
            nrfx_spim_abort(&spi->nrfx_spi.spim);
        }
    } else {
        spis = spi->nrfx_spi.spis.p_reg;
        nrf_spis_int_disable(spis, NRF_SPIS_ALL_INTS_MASK);
        nrf_spis_event_clear(spis, NRF_SPIS_EVENT_END);
        nrf_spis_event_clear(spis, NRF_SPIS_EVENT_ACQUIRED);
        nrf_spis_disable(spis);
        spi->slave_state = HAL_SPI_SLAVE_STATE_IDLE;
    }

    rc = 0;

err:
    return rc;
}

uint16_t hal_spi_tx_val(int spi_num, uint16_t val)
{
    int rc;
    uint16_t txval;
    uint16_t retval;
    struct nrf5340_hal_spi *hal_spi;

    NRF5340_HAL_SPI_RESOLVE(spi_num, hal_spi);

    if (hal_spi->spi_type  == HAL_SPI_TYPE_MASTER) {
        txval = val;
        rc = hal_spi_txrx(spi_num, &txval, &retval, 2);
        if (rc) {
            goto err;
        }
    } else {
        retval = 0xFFFF;
    }

    return retval;

    err:
    return rc;
}

int
hal_spi_txrx(int spi_num, void *txbuf, void *rxbuf, int len)
{
    int rc;
    int nrfx_rxlen;
    int nrfx_txlen;
    nrfx_spim_t *spim;
    struct nrf5340_hal_spi *hal_spi;
    nrfx_spim_xfer_desc_t xfer_desc;

    rc = -1;
    /* Must have txbuf or rxbuf */
    if ((txbuf == NULL) && (rxbuf == NULL)) {
        goto err;
    }

    if ((rxbuf != NULL && !nrfx_is_in_ram(rxbuf)) ||
        (txbuf != NULL && !nrfx_is_in_ram(txbuf))) {
        goto err;
    }

    if ((len == 0) || (len > SPIM_TXD_MAXCNT_MAX)) {
        goto err;
    }

    if (rxbuf == NULL) {
        nrfx_rxlen = 0;
    } else {
        nrfx_rxlen = len;
    }
    if (txbuf == NULL) {
        nrfx_txlen = 0;
    } else {
        nrfx_txlen = len;
    }

    NRF5340_HAL_SPI_RESOLVE(spi_num, hal_spi);

    if (hal_spi->spi_type  == HAL_SPI_TYPE_MASTER) {
        spim = &hal_spi->nrfx_spi.spim;

        xfer_desc.p_tx_buffer = txbuf;
        xfer_desc.p_rx_buffer = rxbuf;
        xfer_desc.rx_length = nrfx_rxlen;
        xfer_desc.tx_length = nrfx_txlen;
        nrfx_spim_xfer(spim, &xfer_desc, NRFX_SPIM_FLAG_NO_XFER_EVT_HANDLER);
        while (nrf_spim_event_check(spim->p_reg, NRF_SPIM_EVENT_END)) {};

        return 0;
    }

    err:
    return rc;
}

int
hal_spi_set_txrx_cb(int spi_num, hal_spi_txrx_cb txrx_cb, void *arg)
{
    int rc;
    struct nrf5340_hal_spi *spi;

    NRF5340_HAL_SPI_RESOLVE(spi_num, spi);

    if (spi->spi_type == HAL_SPI_TYPE_MASTER) {
        if (nrf_spim_enable_check(spi->nrfx_spi.spim.p_reg)) {
            rc = -1;
            goto err;
        }
    } else {
        if (nrf_spis_enable_check(spi->nrfx_spi.spis.p_reg)) {
            rc = -1;
            goto err;
        }
    }

    spi->cb_data.func = txrx_cb;
    spi->cb_data.arg = arg;
    rc = 0;
err:
    return rc;
}

int
hal_spi_txrx_noblock(int spi_num, void *txbuf, void *rxbuf, int len)
{
    int rc;
    int nrfx_rxlen;
    int nrfx_txlen;
    nrfx_spim_t *spim;
    nrfx_spis_t *spis;
    struct nrf5340_hal_spi *spi;

    rc = EINVAL;
    NRF5340_HAL_SPI_RESOLVE(spi_num, spi);

    /* Must have txbuf or rxbuf */
    if ((txbuf == NULL) && (rxbuf == NULL)) {
        goto err;
    }

    if ((rxbuf != NULL && !nrfx_is_in_ram(rxbuf)) ||
        (txbuf != NULL && !nrfx_is_in_ram(txbuf))) {
        goto err;
    }

    if ((len == 0) || (len > SPIM_TXD_MAXCNT_MAX)) {
        goto err;
    }

    if (spi->cb_data.func == NULL) {
        goto err;
    }

    if (rxbuf == NULL) {
        nrfx_rxlen = 0;
    } else {
        nrfx_rxlen = len;
    }
    if (txbuf == NULL) {
        nrfx_txlen = 0;
    } else {
        nrfx_txlen = len;
    }

    if (spi->spi_type  == HAL_SPI_TYPE_MASTER) {
        spim = &spi->nrfx_spi.spim;

        rc = hal_spim_txrx_noblock(spim, txbuf, nrfx_txlen, rxbuf, nrfx_rxlen);
        if (rc != NRFX_SUCCESS) {
            rc = -1;
            goto err;
        }
    } else {
        /*
         * Ready the slave for a transfer. Do not allow this to be called
         * if the slave has already been readied or is requesting the
         * semaphore
         */
        if (spi->slave_state != HAL_SPI_SLAVE_STATE_IDLE) {
            rc = -1;
            goto err;
        }
        spis = &spi->nrfx_spi.spis;
        rc = hal_spis_txrx_noblock(spis, txbuf, nrfx_txlen, rxbuf, nrfx_rxlen);
        if (rc != NRFX_SUCCESS) {
            rc = -1;
            goto err;
        }
    }
    return 0;

err:
    return rc;
}

int
hal_spi_slave_set_def_tx_val(int spi_num, uint16_t val)
{
    int rc;
    nrfx_spis_t *spis;
    struct nrf5340_hal_spi *spi;

    NRF5340_HAL_SPI_RESOLVE(spi_num, spi);
    if (spi->spi_type == HAL_SPI_TYPE_SLAVE) {
        spis = &spi->nrfx_spi.spis;
        spi->def_tx_val = (uint8_t)val;
        nrf_spis_orc_set(spis->p_reg, spi->def_tx_val);
        nrf_spis_def_set(spis->p_reg, spi->def_tx_val);
        rc = 0;
    } else {
        rc = EINVAL;
    }

err:
    return rc;
}

int
hal_spi_abort(int spi_num)
{
    int rc;
    nrfx_spim_t *spim;
    struct nrf5340_hal_spi *spi;

    NRF5340_HAL_SPI_RESOLVE(spi_num, spi);

    rc = 0;
    if (spi->spi_type  == HAL_SPI_TYPE_MASTER) {
        spim = &spi->nrfx_spi.spim;
        nrfx_spim_abort(spim);
    }

err:
    return rc;
}
